--- a/css/labs.css
+++ b/css/labs.css
@@ -1,6 +1,7 @@
   * {
     box-sizing: border-box;
     background-color: darkgrey;
+    color: white;
   }
   
   .column {
@@ -33,3 +34,16 @@
     margin-left: 15px;
     margin-top: 5px;
   }  
+
+  .textColor {
+    color: darkred;
+  }
+
+  .moods {
+    font-size:20px
+  }
+
+  p.italic {
+    font-style: italic;
+  }
+  
