--- a/lab2/css/labs.css
+++ b/lab2/css/labs.css
@@ -70,3 +70,23 @@
     font-family: cursive, sans-serif;
     font-style: italic;
   }
+
+  a:link {
+    text-decoration: none;
+  }
+  
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  a:active {
+    text-decoration: underline;
+  }
+
+  p::first-letter {
+    font-size: 30px;
+  } 
