--- a/lab3/css/movie.css
+++ b/lab3/css/movie.css
@@ -45,6 +45,7 @@ img.right_img_div {
     font-size: 8pt;
     font-family: Arial;
     float: right;
+    position: absolute;
 }
 
 .left_div {
@@ -63,15 +64,15 @@ a.validator {
     border: 4px solid gray;
     width: 800px;
     position: relative; 
-    
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 9%;
-    position: absolute;
 }
 
-.banner_img {
+.banner_img_div {
+    background-image: url("../images/rbg.png");
+	background-repeat: repeat;
     width: 800px;
     height: 83px;
     position: relative;
@@ -113,7 +114,7 @@ p.thick {
 }
 
 .left_div_item {
-    width: 49%;
+    width: 47%;
     column-gap : 2%;
 }
 
@@ -129,4 +130,17 @@ q {
 .validator_div {
     position: relative;
     float: right;
+}
+
+.lower_div {
+    background-color: #A2B964;
+    min-height: 30px;
+}
+
+p.lower_div {
+    padding: 5px;
+    background-color: #A2B964;
+    min-height: 15px;
+    margin-bottom: 0px;
+    border-bottom-left-radius: 16px;
 }
