--- a/lab3/css/movie.css
+++ b/lab3/css/movie.css
@@ -73,6 +73,7 @@ a.validator {
     margin-left: auto;
     margin-right: auto;
     margin-top: 9%;
+    margin-bottom: -66px;
 }
 
 .banner_img_div {
