--- a/lab3/css/movie.css
+++ b/lab3/css/movie.css
@@ -1,3 +1,9 @@
+/**
+    Styling for the tmnt.html web page
+    
+	Author - Elly Businge
+**/
+
 body {
 	background-image: url("../images/background.png");
 	background-repeat: repeat;
