Lab 10 solution - Part 1

--- a/lab10/Lab10/src/main/webapp/css/navbar-top.css
+++ b/lab10/Lab10/src/main/webapp/css/navbar-top.css
@@ -2,3 +2,14 @@
 body {
   min-height: 75rem;
 }
+
+.nav_style {
+	background-color: deepskyblue !important;
+	margin-bottom: 0px !important;
+}
+
+.btn_search {
+	color: white !important;
+    border-color: black !important;
+    background-color: black !important;
+}
