--- a/lab10/Lab10/src/main/webapp/css/custom.css
+++ b/lab10/Lab10/src/main/webapp/css/custom.css
@@ -1,6 +1,6 @@
 /* Show it's not fixed to the top */
 body {
-  min-height: 75rem;
+  min-height: 60rem;
 }
 
 .nav_style {
@@ -12,4 +12,13 @@ body {
 	color: white !important;
     border-color: black !important;
     background-color: black !important;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #f5f5f5;
+    line-height: 50px;
 }
