Lab 10 solution - Part 2

--- a/lab10/Lab10/src/main/webapp/css/custom.css
+++ b/lab10/Lab10/src/main/webapp/css/custom.css
@@ -30,3 +30,12 @@ footer {
 .error_msg {
 	color: red;
 }
+
+.card_style {
+	margin-top: 24px;
+}
+
+.date_style {
+	margin-top: 14px;
+	text-align: end;
+}
